--- a/war/IT_Projekt.html
+++ b/war/IT_Projekt.html
@@ -35,7 +35,17 @@
 
   
 
-    <h1></h1>
+  <div id="layout">
+		
+
+		<div id="menu"></div>
+
+		<div id="main"></div>
+
+	</div>
+
+
+
 
     
   </body>
