Erstentwurf in CSS

--- a/war/IT_Projekt.html
+++ b/war/IT_Projekt.html
@@ -11,7 +11,7 @@
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
-    <link type="text/css" rel="stylesheet" href="IT_Projekt.css">
+    <link rel="stylesheet" href="IT_Projekt.css">
 
     <!--                                           -->
     <!-- Any title is fine                         -->
@@ -36,16 +36,21 @@
   
 
   <div id="layout">
+		<div id="header"><h1>NoteME</h1></div>
+
+		<!-- <div id="menu"></div> -->
+
+		<!-- <div id="main"></div> -->
 		
-
-		<div id="menu"></div>
-
-		<div id="main"></div>
+		<table>
+			<tr>
+			<td><div id="menu"></div></td>
+			<td><div id="MenuView"></div></td>
+			<td><div id="main"></div></td>
+		</table>
+		<div id="Trailer">Copyright Gruppe 7 - Hochschule der Medien, Stuttgart</div>
 
 	</div>
-
-
-
 
     
   </body>
