--- a/war/Report.html
+++ b/war/Report.html
@@ -2,12 +2,28 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Report</title>
+    <title>NoteMEReport</title>
     <script type="text/javascript" language="javascript" src="ReportGenerator/ReportGenerator.nocache.js"></script>
+    <link type="text/css" rel="stylesheet" href="IT_Projekt.css">
   </head>
 
   <body>
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
-
+	<noscript>
+      <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
+        Your web browser must have JavaScript enabled
+        in order for this application to display correctly.
+      </div>
+    </noscript>
+    
+    <div id="layout">
+		<div id="header"><h1>NoteME-Demo</h1></div>
+		<div id="menu"></div>
+		<div id="main"></div>
+		<!-- <div id="Details"></div>-->
+		<div id="trailer">Copyright Gruppe 7 - Hochschule der Medien, Stuttgart</div>
+	</div>
+   
+    
   </body>
 </html>
