--- a/war/IT_Projekt.html
+++ b/war/IT_Projekt.html
@@ -8,50 +8,49 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-    <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
-    <!--                                                               -->
-    <link rel="stylesheet" href="IT_Projekt.css">
-
-    <!--                                           -->
-    <!-- Any title is fine                         -->
-    <!--                                           -->
+    <link type ="text/css" rel="stylesheet" href="IT_Projekt.css">
     <title>NoteMe</title>
     
-    <!--                                           -->
     <!-- This script loads your compiled module.   -->
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
-    <!--                                           -->
+
     <script type="text/javascript" language="javascript" src="it_projekt/it_projekt.nocache.js"></script>
   </head>
 
-  <!--                                           -->
   <!-- The body can have arbitrary html, or      -->
   <!-- you can leave the body empty if you want  -->
   <!-- to create a completely dynamic UI.        -->
-  <!--                                           -->
   <body>
-
   
+  <!-- OPTIONAL: include this if you want history support -->
+	<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1'
+		style="position: absolute; width: 0; height: 0; border: 0"></iframe>
 
+  <!-- RECOMMENDED if your web app will not function without JavaScript enabled -->
+	<noscript>
+		<div
+			style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
+			Your web browser must have JavaScript enabled in order for this
+			application to display correctly.</div>
+	</noscript>
+  
   <div id="layout">
 		<div id="header"><h1>NoteME</h1></div>
 
 		<!-- <div id="menu"></div> -->
-
 		<!-- <div id="main"></div> -->
 		
 		<table>
 			<tr>
 			<td><div id="menu"></div></td>
-			<td><div id="MenuView"></div></td>
+		<!-- 	<td><div id="MenuView"></div></td> -->
 			<td><div id="main"></div></td>
+			
 		</table>
-		<div id="Trailer">Copyright Gruppe 7 - Hochschule der Medien, Stuttgart</div>
-
+		<!--  <div id="Trailer">Copyright Gruppe 7 - Hochschule der Medien, Stuttgart</div> -->
 	</div>
-
     
   </body>
 </html>
