--- a/war/IT_Projekt.html
+++ b/war/IT_Projekt.html
@@ -10,6 +10,7 @@
 
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <link type ="text/css" rel="stylesheet" href="IT_Projekt.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>NoteMe</title>
     
     <!-- This script loads your compiled module.   -->
@@ -27,7 +28,7 @@
   <!-- OPTIONAL: include this if you want history support -->
 	<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1'
 		style="position: absolute; width: 0; height: 0; border: 0"></iframe>
-
+	
   <!-- RECOMMENDED if your web app will not function without JavaScript enabled -->
 	<noscript>
 		<div
@@ -37,15 +38,12 @@
 	</noscript>
   
   <div id="layout">
-		<div id="header"><h1>NoteME</h1></div>
+		<div id="header"><img src="Header.jpg"></div>
+		<!--  <h1>NoteME</h1> -->
 
-		<!-- <div id="menu"></div> -->
-		<!-- <div id="main"></div> -->
-		
 		<table>
 			<tr>
 			<td><div id="menu"></div></td>
-		<!-- 	<td><div id="MenuView"></div></td> -->
 			<td><div id="main"></div></td>
 			
 		</table>
