Design Navigation neu + sonst paar Design Änderungen

--- a/war/IT_Projekt.html
+++ b/war/IT_Projekt.html
@@ -45,7 +45,8 @@
 			<tr>
 			<td><div id="menu"></div></td>
 			<td><div id="main"></div></td>
-			
+			<td><div id="table"></div></td>
+			</tr>
 		</table>
 		<!--  <div id="Trailer">Copyright Gruppe 7 - Hochschule der Medien, Stuttgart</div> -->
 	</div>
