Problem mit den verschwindenen Überschriften gelöscht
& Permission hinzugefügt

--- a/war/IT_Projekt.html
+++ b/war/IT_Projekt.html
@@ -44,8 +44,14 @@
 		<table>
 			<tr>
 			<td><div id="menu"></div></td>
+			</tr>
+			<tr>
 			<td><div id="main"></div></td>
-			<td><div id="table"></div></td>
+				<table>
+				<tr>
+				<td><div id="table"></div></td>
+				</tr>
+				</table>
 			</tr>
 		</table>
 		<!--  <div id="Trailer">Copyright Gruppe 7 - Hochschule der Medien, Stuttgart</div> -->
