Klassen um tableNotebook erweitert

--- a/war/IT_Projekt.html
+++ b/war/IT_Projekt.html
@@ -50,6 +50,7 @@
 				<table>
 				<tr>
 				<td><div id="table"></div></td>
+				<td><div id="tableNotebook"></div></td>
 				</tr>
 				</table>
 			</tr>
