--- a/war/IT_Projekt.html
+++ b/war/IT_Projekt.html
@@ -11,6 +11,8 @@
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <link type ="text/css" rel="stylesheet" href="IT_Projekt.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>NoteMe</title>
     
     <!-- This script loads your compiled module.   -->
