Designänderungen am Report Generator

--- a/war/Report.html
+++ b/war/Report.html
@@ -5,6 +5,9 @@
     <title>NoteMEReport</title>
     <script type="text/javascript" language="javascript" src="ReportGenerator/ReportGenerator.nocache.js"></script>
     <link type ="text/css" rel="stylesheet" href="IT_Projekt.css">
+     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   </head>
 
   <body>
@@ -17,11 +20,10 @@
     </noscript>
     
     <div id="layout">
-		<div id="header"><h1>NoteME-Demo</h1></div>
+		<div id="header"><img src="Header.jpg"><h1>NoteME-Report</h1></div>
 		<div id="menu"></div>
 		<div id="main"></div>
 		<!-- <div id="Details"></div>-->
-		<div id="trailer">Copyright Gruppe 7 - Hochschule der Medien, Stuttgart</div>
 	</div>
    
     
