Button verändert + andere Änderungen

--- a/war/IT_Projekt.html
+++ b/war/IT_Projekt.html
@@ -53,6 +53,7 @@
 				<tr>
 				<td><div id="table"></div></td>
 				<td><div id="tableNotebook"></div></td>
+				<td><div id="tableNotebook1"></div></td>
 				</tr>
 				</table>
 			</tr>
