--- a/war/Report.html
+++ b/war/Report.html
@@ -6,16 +6,13 @@
     <script type="text/javascript" language="javascript" src="ReportGenerator/ReportGenerator.nocache.js"></script>
     <link type ="text/css" rel="stylesheet" href="IT_Projekt.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
   </head>
 
   <body>
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
 	<noscript>
       <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
-        Your web browser must have JavaScript enabled
-        in order for this application to display correctly.
+        Your web browser must have JavaScript enabled in order for this application to display correctly.
       </div>
     </noscript>
     
