--- a/war/Report.html
+++ b/war/Report.html
@@ -6,6 +6,8 @@
     <script type="text/javascript" language="javascript" src="ReportGenerator/ReportGenerator.nocache.js"></script>
     <link type ="text/css" rel="stylesheet" href="IT_Projekt.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet">
   </head>
 
   <body>
